Added support for subscription
Former-commit-id: ddadd5d8197a3ec721d93234fc94596192958107

--- a/jolie/nbproject/configs/Jolie_Mqtt_Publisher.properties
+++ b/jolie/nbproject/configs/Jolie_Mqtt_Publisher.properties
@@ -1,2 +1,2 @@
-$label=Jolie Http Client
+$label=Jolie Mqtt Publisher
 run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=./extensions/rmi.jar -cp ./lib/libjolie.jar:./jolie.jar
