--- a/jolie/nbproject/configs/Jolie_Mqtt_Subscriber.properties
+++ b/jolie/nbproject/configs/Jolie_Mqtt_Subscriber.properties
@@ -1,2 +1,2 @@
-$label=Jolie Config Server
+$label=Jolie Mqtt Subscriber
 run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=./extensions/rmi.jar -cp ./lib/libjolie.jar:./jolie.jar
