Extensive update to process request responses and serialization of value
Former-commit-id: c326d1bcff0f32af32b89399a443539c79ef4f2f

--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -86,6 +86,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
+project.license=mit
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
