--- a/build.xml
+++ b/build.xml
@@ -233,7 +233,7 @@ Please make sure that:
 		<ant antfile="${project.sodep}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.jsonrpc}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.sodeps}/build.xml" inheritall="false" target="jar"/>
-		<!-- <ant antfile="${project.xmlrpc}/build.xml" inheritall="false" target="jar"/> -->
+		<ant antfile="${project.xmlrpc}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.local}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.localsocket}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.metaservice-java}/build.xml" inheritall="false" target="jar"/>
@@ -266,7 +266,7 @@ Please make sure that:
 		<ant antfile="${project.jsonrpc}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.sodep}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.sodeps}/build.xml" inheritall="false" target="clean"/>
-		<!-- <ant antfile="${project.xmlrpc}/build.xml" inheritall="false" target="clean"/> -->
+		<ant antfile="${project.xmlrpc}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.joliedoc}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.jolie2plasma}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.jolie2dummy}/build.xml" inheritall="false" target="clean"/>
@@ -315,7 +315,7 @@ Please make sure that:
 				<file file="${project.sodep}/dist/sodep.jar"/>
 				<file file="${project.jsonrpc}/dist/jsonrpc.jar"/>
 				<file file="${project.sodeps}/dist/sodeps.jar"/>
-				<!-- <file file="${project.xmlrpc}/dist/xmlrpc.jar"/> -->
+				<file file="${project.xmlrpc}/dist/xmlrpc.jar"/>
 				<file file="${project.localsocket}/dist/localsocket.jar"/>
 				<file file="${project.local}/dist/local.jar"/>
 			</resources>
