--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jolie-js.jar=../../dist/jolie/lib/jolie-js.jar
+file.reference.jolie-xml.jar=../../dist/jolie/lib/jolie-xml.jar
 file.reference.mqtt-src=src
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
@@ -38,7 +40,9 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.netty.jar}:\
-    ${reference.jolie.jar}
+    ${reference.jolie.jar}:\
+    ${file.reference.jolie-xml.jar}:\
+    ${file.reference.jolie-js.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
