project.properties updated for xmlrpc, soap, and sodep

--- a/extensions/xmlrpc/nbproject/project.properties
+++ b/extensions/xmlrpc/nbproject/project.properties
@@ -1,3 +1,9 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+application.title=xmlrpc
+application.vendor=
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,7 +24,9 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/xmlrpc.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.netty.jar=../../lib/netty/netty.jar
 file.reference.xmlrpc-src=src
 includes=**
 jar.compress=false
@@ -26,10 +34,14 @@ javac.classpath=\
     ${reference.jolie.jar}:\
     ${reference.libjolie.jar}:\
     ${reference.http.jar}:\
-    ${reference.jolie-xml.jar}
+    ${reference.jolie-xml.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -52,6 +64,7 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.http=../http
 project.jolie=../../jolie
