--- a/extensions/sodep/nbproject/project.properties
+++ b/extensions/sodep/nbproject/project.properties
@@ -1,3 +1,9 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+application.title=sodep
+application.vendor=
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -16,15 +22,21 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/sodep.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.netty.jar=../../lib/netty/netty.jar
 file.reference.sodep-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.jolie.jar}
+    ${reference.jolie.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
@@ -47,6 +59,7 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
