--- a/jolie/nbproject/configs/Jolie_Mqtt_Publisher.properties
+++ b/jolie/nbproject/configs/Jolie_Mqtt_Publisher.properties
@@ -1,2 +1,2 @@
 $label=Jolie Mqtt Publisher
-run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=./extensions/rmi.jar -cp ./lib/libjolie.jar:./jolie.jar
+run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=./extensions/rmi.jar -cp ./lib/libjolie.jar:./jolie.jar:./lib/jolie-js.jar:./lib/jolie-xml.jar
