--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -30,6 +30,9 @@ dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jolie-js.jar=../../dist/jolie/lib/jolie-js.jar
+file.reference.jolie-xml.jar=../../dist/jolie/lib/jolie-xml.jar
+file.reference.jolie.jar=../../dist/jolie/jolie.jar
 file.reference.mqtt-src=src
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
@@ -38,9 +41,9 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.netty.jar}:\
-    ${reference.jolie.jar}:\
-    ${reference.jolie-xml.jar}:\
-    ${reference.jolie-js.jar}
+    ${file.reference.jolie-js.jar}:\
+    ${file.reference.jolie-xml.jar}:\
+    ${file.reference.jolie.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
@@ -87,13 +90,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.jolie=../../jolie
-project.jolie-js=../../lib/jolie-js
-project.jolie-xml=../../lib/jolie-xml
 project.license=mit
-reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
-reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
-reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
