--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -30,19 +30,17 @@ dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jolie-js.jar=../../dist/jolie/lib/jolie-js.jar
-file.reference.jolie-xml.jar=../../dist/jolie/lib/jolie-xml.jar
-file.reference.jolie.jar=../../dist/jolie/jolie.jar
 file.reference.mqtt-src=src
 file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=true
+jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.netty.jar}:\
     ${file.reference.jolie-js.jar}:\
     ${file.reference.jolie-xml.jar}:\
+    ${file.reference.libjolie.jar}:\
     ${file.reference.jolie.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
@@ -77,7 +75,6 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=jolie.net.TestMain
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
@@ -90,7 +87,13 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.license=mit
+project.jolie=../../jolie
+project.jolie-js=../../lib/jolie-js
+project.libjolie=../../libjolie
+reference.http.jar=${project.http}/dist/http.jar
+reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
