--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -2,9 +2,8 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=mqtt
-application.vendor=stefanopiozingaro
+application.title=jolie
+application.vendor=fmontesi
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -16,59 +15,52 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
-# Files in build.classes.dir which should be excluded from distribution jar
-dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/mqtt.jar
+dist.jar=${dist.dir}/jolie.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jolie-js.jar=../../dist/jolie/lib/jolie-js.jar
-file.reference.jolie-xml.jar=../../dist/jolie/lib/jolie-xml.jar
-file.reference.jolie.jar=../../dist/jolie/jolie.jar
-file.reference.mqtt-src=src
-file.reference.netty.jar=../../lib/netty/netty.jar
+file.reference.jolie-src=src
+file.reference.netty.jar=../lib/netty/netty.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
-jar.compress=true
+jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.netty.jar}:\
-    ${file.reference.jolie-js.jar}:\
-    ${file.reference.jolie-xml.jar}:\
-    ${file.reference.jolie.jar}
+    ${reference.libjolie.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=true
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.processorpath=\
-    ${javac.test.classpath}
+    ${build.classes.dir}:\
+    ${libs.junit.classpath}:\
+    ${libs.junit_4.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
-javadoc.noindex=true
-javadoc.nonavbar=true
-javadoc.notree=true
+javadoc.noindex=false
+javadoc.nonavbar=false
+javadoc.notree=false
 javadoc.private=false
-javadoc.splitindex=false
-javadoc.use=false
+javadoc.splitindex=true
+javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/home/fmontesi/programs/joliesvn/jolie/trunk/jolie/dist/
 jnlp.descriptor=application
 jnlp.enabled=false
 jnlp.mixed.code=default
@@ -77,11 +69,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=jolie.net.TestMain
-# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
-manifest.custom.application.library.allowable.codebase=
-# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
-manifest.custom.caller.allowable.codebase=
+main.class=jolie.Jolie
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
@@ -89,17 +77,16 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=default_platform
-project.license=mit
+project.libjolie=../libjolie
+project.license=lgpl21
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.mqtt-src}
+src.dir=${file.reference.jolie-src}
