--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -1,11 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=mqtt
-application.vendor=stefanopiozingaro
-auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,24 +26,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.jolie-js.jar=../../dist/jolie/lib/jolie-js.jar
-file.reference.jolie-xml.jar=../../dist/jolie/lib/jolie-xml.jar
-file.reference.jolie.jar=../../dist/jolie/jolie.jar
-file.reference.mqtt-src=src
-file.reference.netty.jar=../../lib/netty/netty.jar
+file.reference.netty.jar=../../dist/jolie/lib/netty.jar
 includes=**
-jar.archive.disabled=${jnlp.enabled}
-jar.compress=true
-jar.index=${jnlp.enabled}
+jar.compress=false
 javac.classpath=\
-    ${file.reference.netty.jar}:\
-    ${file.reference.jolie-js.jar}:\
-    ${file.reference.jolie-xml.jar}:\
-    ${file.reference.jolie.jar}
+    ${reference.jolie-js.jar}:\
+    ${reference.jolie-xml.jar}:\
+    ${reference.jolie.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.processorpath=\
@@ -60,37 +51,23 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
-javadoc.noindex=true
-javadoc.nonavbar=true
-javadoc.notree=true
+javadoc.noindex=false
+javadoc.nonavbar=false
+javadoc.notree=false
 javadoc.private=false
-javadoc.splitindex=false
-javadoc.use=false
+javadoc.splitindex=true
+javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=default
-jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
-main.class=jolie.net.TestMain
-# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
-manifest.custom.application.library.allowable.codebase=
-# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
-manifest.custom.caller.allowable.codebase=
-# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
-manifest.custom.codebase=
-# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
-manifest.custom.permissions=
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+mkdist.disabled=true
 platform.active=default_platform
-project.license=mit
+project.jolie=../../jolie
+project.jolie-js=../../lib/jolie-js
+project.jolie-xml=../../lib/jolie-xml
+reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
+reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -102,4 +79,5 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-src.dir=${file.reference.mqtt-src}
+src.dir=src
+test.src.dir=test
