--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=mqtt
+application.vendor=thesave
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,14 +28,18 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.netty.jar=../../dist/jolie/lib/netty.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
+    ${reference.jolie.jar}:\
+    ${reference.libjolie.jar}:\
     ${reference.jolie-js.jar}:\
     ${reference.jolie-xml.jar}:\
-    ${reference.jolie.jar}:\
     ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -59,15 +65,35 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
+manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
 project.jolie-js=../../lib/jolie-js
 project.jolie-xml=../../lib/jolie-xml
+project.libjolie=../../libjolie
 reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
 reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
