--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -29,12 +29,18 @@ dist.jar=${dist.dir}/coap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.guava-19.0.jar=../../lib/guava-19.0.jar
 file.reference.netty.jar=../../lib/netty/netty.jar
+file.reference.slf4j-api-1.7.7.jar=../../lib/slf4j-api-1.7.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}
+    ${file.reference.netty.jar}:\
+    ${reference.jolie-js.jar}:\
+    ${reference.jolie-xml.jar}:\
+    ${file.reference.guava-19.0.jar}:\
+    ${file.reference.slf4j-api-1.7.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,6 +71,10 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
+project.jolie-js=../../lib/jolie-js
+project.jolie-xml=../../lib/jolie-xml
+reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
+reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
