--- a/extensions/pubsubchannel/nbproject/project.properties
+++ b/extensions/pubsubchannel/nbproject/project.properties
@@ -26,12 +26,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.localsocket-src=src
+file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.jolie.jar}
+    ${reference.jolie.jar}:\
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
