--- a/build.xml
+++ b/build.xml
@@ -227,7 +227,7 @@ Please make sure that:
 		<ant antfile="${project.http}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.https}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.mqtt}/build.xml" inheritall="false" target="jar"/>
-        <ant antfile="${project.coap}/build.xml" inheritall="false" target="jar"/>
+    <!-- <ant antfile="${project.coap}/build.xml" inheritall="false" target="jar"/> -->
 		<ant antfile="${project.javascript}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.btl2cap}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.rmi}/build.xml" inheritall="false" target="jar"/>
@@ -238,6 +238,7 @@ Please make sure that:
 		<ant antfile="${project.xmlrpc}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.local}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.localsocket}/build.xml" inheritall="false" target="jar"/>
+		<ant antfile="${project.pubsubchannel}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.metaservice-java}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.monitorJavaServices}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.coreJavaServices}/build.xml" inheritall="false" target="jar"/>
@@ -261,8 +262,8 @@ Please make sure that:
 		<ant antfile="${project.auto}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.http}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.https}/build.xml" inheritall="false" target="clean"/>
-        <ant antfile="${project.mqtt}/build.xml" inheritall="false" target="clean"/>
-		<ant antfile="${project.coap}/build.xml" inheritall="false" target="clean"/>
+    <ant antfile="${project.mqtt}/build.xml" inheritall="false" target="clean"/>
+		<!-- <ant antfile="${project.coap}/build.xml" inheritall="false" target="clean"/> -->
 		<ant antfile="${project.javascript}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.btl2cap}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.rmi}/build.xml" inheritall="false" target="clean"/>
@@ -279,6 +280,7 @@ Please make sure that:
 		<ant antfile="${project.joliec}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.jolie2java}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.localsocket}/build.xml" inheritall="false" target="clean"/>
+		<ant antfile="${project.pubsubchannel}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.local}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.metaservice-java}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.coreJavaServices}/build.xml" inheritall="false" target="clean"/>
@@ -312,9 +314,9 @@ Please make sure that:
 				<file file="${project.auto}/dist/auto.jar"/>
 				<file file="${project.http}/dist/http.jar"/>
 				<file file="${project.https}/dist/https.jar"/>
-                <file file="${project.mqtt}/dist/mqtt.jar"/>
-				<file file="${project.coap}/dist/coap.jar"/>
-                <file file="${project.javascript}/dist/javascript.jar"/>
+        <file file="${project.mqtt}/dist/mqtt.jar"/>
+				<!-- <file file="${project.coap}/dist/coap.jar"/> -->
+	      <file file="${project.javascript}/dist/javascript.jar"/>
 				<file file="${project.btl2cap}/dist/btl2cap.jar"/>
 				<file file="${project.rmi}/dist/rmi.jar"/>
 				<file file="${project.soap}/dist/soap.jar"/>
@@ -323,6 +325,7 @@ Please make sure that:
 				<file file="${project.sodeps}/dist/sodeps.jar"/>
 				<file file="${project.xmlrpc}/dist/xmlrpc.jar"/>
 				<file file="${project.localsocket}/dist/localsocket.jar"/>
+				<file file="${project.pubsubchannel}/dist/pubsubchannel.jar"/>
 				<file file="${project.local}/dist/local.jar"/>
 			</resources>
 		</copy>
