--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -25,13 +25,19 @@ dist.jar=${dist.dir}/jolie.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.coreJavaServices.jar=/usr/local/lib/jolie/javaServices/coreJavaServices.jar
+file.reference.jolie-js.jar=/usr/local/lib/jolie/lib/jolie-js.jar
 file.reference.jolie-src=src
+file.reference.json_simple.jar=/usr/local/lib/jolie/lib/json_simple.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.libjolie.jar}
+    ${reference.libjolie.jar}:\
+    ${file.reference.jolie-js.jar}:\
+    ${file.reference.json_simple.jar}:\
+    ${file.reference.coreJavaServices.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -82,10 +88,6 @@ reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
