Removing guavas from dependencies ...

--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -29,18 +29,14 @@ dist.jar=${dist.dir}/coap.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.guava-19.0.jar=../../lib/guava-19.0.jar
 file.reference.netty.jar=../../lib/netty/netty.jar
-file.reference.slf4j-api-1.7.7.jar=../../lib/slf4j-api-1.7.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
     ${file.reference.netty.jar}:\
     ${reference.jolie-js.jar}:\
-    ${reference.jolie-xml.jar}:\
-    ${file.reference.guava-19.0.jar}:\
-    ${file.reference.slf4j-api-1.7.7.jar}
+    ${reference.jolie-xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
