--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -34,9 +34,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}:\
-    ${reference.jolie-js.jar}:\
-    ${reference.jolie-xml.jar}
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -67,10 +65,6 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
-project.jolie-js=../../lib/jolie-js
-project.jolie-xml=../../lib/jolie-xml
-reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
-reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
