added json xml and raw format support in coap
Former-commit-id: ad3aa114c0f49940f4aa246c1bf08fd4cf38e49d

--- a/extensions/coap/nbproject/project.properties
+++ b/extensions/coap/nbproject/project.properties
@@ -34,7 +34,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}
+    ${file.reference.netty.jar}:\
+    ${reference.jolie-js.jar}:\
+    ${reference.jolie-xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,6 +67,10 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
+project.jolie-js=../../lib/jolie-js
+project.jolie-xml=../../lib/jolie-xml
+reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
+reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
 run.classpath=\
     ${javac.classpath}:\
