datagram as extension added
Former-commit-id: 9c805c24c8221db0198a2935f8f54f2410017d31

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ build/
 /extensions/pubsubchannel/nbproject/private/
 /extensions/auto/nbproject/private/
 /extensions/coap/nbproject/private/
+/extensions/datagram/nbproject/private/
+/extensions/mqtt/nbproject/private/
