--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -20,6 +20,7 @@ project.sodeps=extensions/sodeps
 project.jsonrpc=extensions/jsonrpc
 project.xmlrpc=extensions/xmlrpc
 project.localsocket=extensions/localsocket
+project.datagram=extensions/datagram
 project.pubsubchannel=extensions/pubsubchannel
 project.local=extensions/local
 project.metaservice-java=support/metaservice-java
