fixed library netty.jar to relative path for mqtt

--- a/extensions/mqtt/nbproject/project.properties
+++ b/extensions/mqtt/nbproject/project.properties
@@ -30,14 +30,14 @@ dist.jar=${dist.dir}/mqtt.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.netty.jar=../../dist/jolie/lib/netty.jar
+file.reference.netty.jar=../../lib/netty/netty.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${reference.libjolie.jar}:\
+    ${reference.libjolie-1.jar}:\
     ${reference.jolie-js.jar}:\
     ${reference.jolie-xml.jar}:\
     ${file.reference.netty.jar}
@@ -90,10 +90,11 @@ project.jolie=../../jolie
 project.jolie-js=../../lib/jolie-js
 project.jolie-xml=../../lib/jolie-xml
 project.libjolie=../../libjolie
+project.libjolie-1=../../../jolie/libjolie
 reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
 reference.jolie-xml.jar=${project.jolie-xml}/dist/jolie-xml.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
-reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
+reference.libjolie-1.jar=${project.libjolie-1}/dist/libjolie.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
