--- a/extensions/datagram/nbproject/project.properties
+++ b/extensions/datagram/nbproject/project.properties
@@ -57,6 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
