--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ build/
 /extensions/coap/nbproject/private/
 /extensions/datagram/nbproject/private/
 /extensions/mqtt/nbproject/private/
+lib/netty-all-4.1.17.Final-javadoc.jar
+lib/netty-all-4.1.17.Final-sources.jar
