--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ build/
 /extensions/mqtt/nbproject/private/
 lib/netty-all-4.1.17.Final-javadoc.jar
 lib/netty-all-4.1.17.Final-sources.jar
+extensions/coap/nbproject/private/private.xml
