--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ lib/netty-all-4.1.17.Final-javadoc.jar
 lib/netty-all-4.1.17.Final-sources.jar
 extensions/coap/nbproject/private/private.xml
 tools/jolie2dummy/nbproject/private/private.properties
+tools/jolie2dummy/nbproject/private/private.properties
+tools/jolie2dummy/nbproject/private/private.properties
