--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ extensions/coap/nbproject/private/private.xml
 tools/jolie2dummy/nbproject/private/private.properties
 tools/jolie2dummy/nbproject/private/private.properties
 tools/jolie2dummy/nbproject/private/private.properties
+tools/jolie2dummy/nbproject/private/private.properties
