--- a/extensions/datagram/nbproject/project.properties
+++ b/extensions/datagram/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.jar=${dist.dir}/datagram.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.netty.jar=../../dist/jolie/lib/netty.jar
+file.reference.netty.jar-1=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}
+    ${file.reference.netty.jar}:\
+    ${file.reference.netty.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
