update test for extension coap
Former-commit-id: bb7abe51f645a74cfcbbab6268405d42ac6b9c98

--- a/jolie/nbproject/configs/Coap_Client.properties
+++ b/jolie/nbproject/configs/Coap_Client.properties
@@ -1,1 +1,1 @@
-run.jvmargs=-ea:jolie... -ea:joliex... -cp ./lib/libjolie.jar:./jolie.jar
+run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=./extensions/rmi.jar -cp ./lib/libjolie.jar:./jolie.jar
