--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ lib/netty-all-4.1.17.Final-sources.jar
 extensions/coap/nbproject/private/private.xml
 lib/netty/netty-all-4.1.17.Final-sources.jar
 lib/netty/netty-all-4.1.17.Final-javadoc.jar
+*.properties
