--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ extensions/coap/nbproject/private/private.xml
 lib/netty/netty-all-4.1.17.Final-sources.jar
 lib/netty/netty-all-4.1.17.Final-javadoc.jar
 *.properties
+extensions/coap/nbproject/private/private.xml
