minor and initial commit for ssl and serial
Former-commit-id: 304db58f76d9b6666181c3ab75b7d2cdb4dbdef0

--- a/extensions/datagram/nbproject/project.properties
+++ b/extensions/datagram/nbproject/project.properties
@@ -28,13 +28,11 @@ dist.jar=${dist.dir}/datagram.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.netty.jar=../../dist/jolie/lib/netty.jar
-file.reference.netty.jar-1=../../lib/netty/netty.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.jolie.jar}:\
-    ${file.reference.netty.jar}:\
-    ${file.reference.netty.jar-1}
+    ${file.reference.netty.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
