First working implementation of ChannelPools
Former-commit-id: bfa0edd85665472bad764a4bf56994dcdb0f4fdf

--- a/jolie/nbproject/project.properties
+++ b/jolie/nbproject/project.properties
@@ -87,7 +87,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-ea:jolie... -ea:joliex... -Djava.rmi.server.codebase=file:/./extensions/rmi.jar -cp ./lib/netty.jar:./lib/libjolie.jar:./jolie.jar
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
