first working medium serial attempt

--- a/buildconfig/build.properties
+++ b/buildconfig/build.properties
@@ -21,6 +21,7 @@ project.jsonrpc=extensions/jsonrpc
 project.xmlrpc=extensions/xmlrpc
 project.localsocket=extensions/localsocket
 project.datagram=extensions/datagram
+project.serial=extensions/serial
 project.pubsubchannel=extensions/pubsubchannel
 project.local=extensions/local
 project.metaservice-java=support/metaservice-java
