--- a/build.xml
+++ b/build.xml
@@ -239,6 +239,7 @@ Please make sure that:
 		<ant antfile="${project.local}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.localsocket}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.datagram}/build.xml" inheritall="false" target="jar"/>
+		<ant antfile="${project.serial}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.pubsubchannel}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.metaservice-java}/build.xml" inheritall="false" target="jar"/>
 		<ant antfile="${project.monitorJavaServices}/build.xml" inheritall="false" target="jar"/>
@@ -282,6 +283,7 @@ Please make sure that:
 		<ant antfile="${project.jolie2java}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.localsocket}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.datagram}/build.xml" inheritall="false" target="clean"/>
+		<ant antfile="${project.serial}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.pubsubchannel}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.local}/build.xml" inheritall="false" target="clean"/>
 		<ant antfile="${project.metaservice-java}/build.xml" inheritall="false" target="clean"/>
@@ -328,6 +330,7 @@ Please make sure that:
 				<file file="${project.xmlrpc}/dist/xmlrpc.jar"/>
 				<file file="${project.localsocket}/dist/localsocket.jar"/>
 				<file file="${project.datagram}/dist/datagram.jar"/>
+				<file file="${project.serial}/dist/serial.jar"/>
 				<file file="${project.pubsubchannel}/dist/pubsubchannel.jar"/>
 				<file file="${project.local}/dist/local.jar"/>
 			</resources>
@@ -367,6 +370,7 @@ Please make sure that:
 		<copy file="${libs.commons-lang3}" tofile="${dist.jolie}/lib/commons-lang3.jar"/>
 		<copy file="${libs.uri-templates}" tofile="${dist.jolie}/lib/uri-templates.jar"/>
 		<copy file="${libs.netty}" tofile="${dist.jolie}/lib/netty.jar"/>
+		<copy file="${libs.jSerialComm}" tofile="${dist.jolie}/lib/jSerialComm.jar"/>
 
 		<antcall target="-create-unix-launchers" />
 		<antcall target="-create-windows-launchers" />
