--- a/buildconfig/config.properties
+++ b/buildconfig/config.properties
@@ -30,3 +30,4 @@ libs.smackx=lib/xmpp/smackx.jar
 libs.commons-lang3=lib/commons-lang/commons-lang3.jar
 libs.uri-templates=lib/uri-templates/uri-templates.jar
 libs.netty=lib/netty/netty.jar
+libs.jSerialComm=lib/jSerialComm/jSerialComm.jar
