some update on serial protocol

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ lib/netty/netty-all-4.1.17.Final-javadoc.jar
 extensions/coap/nbproject/private/private.xml
 /extensions/serial/nbproject/private/
 /extensions/ssl/nbproject/private/
+/extensions/modbus/nbproject/private/
