Revert "Merge remote-tracking branch 'origin' into next"
This reverts commit 81dc0ba5b1ccad485dc60d304a35f340329c06fd.

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,52 @@
-/extensions/auto/nbproject/private/
+/jolie/nbproject/private/
+/libjolie/nbproject/private/
+/javaServices/coreJavaServices/nbproject/private/
+/javaServices/monitorJavaServices/nbproject/private/
 /extensions/btl2cap/nbproject/private/
 /extensions/http/nbproject/private/
 /extensions/https/nbproject/private/
-/extensions/javascript/nbproject/private/
 /extensions/jsonrpc/nbproject/private/
-/extensions/local/nbproject/private/
 /extensions/localsocket/nbproject/private/
 /extensions/rmi/nbproject/private/
 /extensions/soap/nbproject/private/
 /extensions/sodep/nbproject/private/
 /extensions/sodeps/nbproject/private/
 /extensions/xmlrpc/nbproject/private/
-/javaServices/coreJavaServices/nbproject/private/
-/javaServices/monitorJavaServices/nbproject/private/
-/jolie/build/
-/jolie/dist/
-/jolie/nbproject/private/
-/lib/jolie-js/nbproject/private/
 /lib/jolie-ssl/nbproject/private/
 /lib/jolie-xml/nbproject/private/
-/lib/xsom/build
 /lib/xsom/nbproject/private/
-/libjolie/build/
-/libjolie/dist/
-/libjolie/nbproject/private/
 /support/jolie-gwt/nbproject/private/
 /support/jolie-java/nbproject/private/
 /support/metaservice-java/nbproject/private/
 /tools/jolie2java/nbproject/private/
 /tools/jolie2plasma/nbproject/private/
-/tools/jolie2surface/nbproject/private/
 /tools/jolie2wsdl/nbproject/private/
 /tools/joliec/nbproject/private/
 /tools/joliedoc/nbproject/private/
-dist
-build
+/libjolie/build/
+/jolie/build/
+/libjolie/dist/
+/jolie/dist/
+dist/
+build/
+/extensions/javascript/nbproject/private/
+/extensions/local/nbproject/private/
+/lib/jolie-js/nbproject/private/
+/tools/jolie2surface/nbproject/private/
+/extensions/mqtt/nbproject/private/
+/lib/xsom/build
+/extensions/pubsubchannel/nbproject/private/
+/extensions/auto/nbproject/private/
+/extensions/coap/nbproject/private/
+/extensions/datagram/nbproject/private/
+/extensions/mqtt/nbproject/private/
+lib/netty-all-4.1.17.Final-javadoc.jar
+lib/netty-all-4.1.17.Final-sources.jar
+extensions/coap/nbproject/private/private.xml
+lib/netty/netty-all-4.1.17.Final-sources.jar
+lib/netty/netty-all-4.1.17.Final-javadoc.jar
+*.properties
+extensions/coap/nbproject/private/private.xml
+/extensions/serial/nbproject/private/
+/extensions/ssl/nbproject/private/
+/extensions/modbus/nbproject/private/
