--- a/tools/joliec/nbproject/project.properties
+++ b/tools/joliec/nbproject/project.properties
@@ -1,57 +1,75 @@
-#Tue Aug 22 08:59:47 CEST 2017
-excludes=
-javac.deprecation=false
-build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
-javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.processorpath=${javac.classpath}
-javac.target=1.6
-javadoc.noindex=false
-javadoc.additionalparam=
-includes=**
-build.classes.dir=${build.dir}/classes
-source.encoding=UTF-8
-javadoc.author=false
-test.src.dir=test
-build.dir=build
-reference.jolie.jar=${project.jolie}/dist/jolie.jar
-build.test.classes.dir=${build.dir}/test/classes
-platform.active=default_platform
-javac.compilerargs=
-reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
-main.class=jolie.compiler.Main
-dist.jar=${dist.dir}/joliec.jar
-javadoc.use=true
-build.sysclasspath=ignore
-debug.test.classpath=${run.test.classpath}
-dist.dir=dist
-build.classes.excludes=**/*.java,**/*.form
-javadoc.encoding=${source.encoding}
-javadoc.splitindex=true
-javac.source=1.6
-application.vendor=fmontesi
-junit.selected.version=3
-debug.classpath=${run.classpath}
-run.jvmargs=
-jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
-jar.compress=false
-build.generated.dir=${build.dir}/generated
-javadoc.private=false
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 application.title=joliec
-meta.inf.dir=${src.dir}/META-INF
-annotation.processing.enabled=true
-manifest.file=manifest.mf
-dist.javadoc.dir=${dist.dir}/javadoc
-src.dir=src
-endorsed.classpath=
-annotation.processing.enabled.in.editor=false
-javac.classpath=${reference.jolie.jar}\:${reference.libjolie.jar}
-project.jolie=../../jolie
+application.vendor=fmontesi
+build.classes.dir=${build.dir}/classes
+build.classes.excludes=**/*.java,**/*.form
+# This directory is removed when the project is cleaned:
+build.dir=build
+build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
+# Only compile against the classpath explicitly listed here:
+build.sysclasspath=ignore
+build.test.classes.dir=${build.dir}/test/classes
+build.test.results.dir=${build.dir}/test/results
+debug.classpath=\
+    ${run.classpath}
+debug.test.classpath=\
+    ${run.test.classpath}
+# This directory is removed when the project is cleaned:
+dist.dir=dist
+dist.jar=${dist.dir}/joliec.jar
+dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
+excludes=
+includes=**
+jar.compress=false
+javac.classpath=\
+    ${reference.jolie.jar}:\
+    ${reference.libjolie.jar}
+# Space-separated list of extra javac options
+javac.compilerargs=
+javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.6
+javac.target=1.6
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit.classpath}:\
+    ${libs.junit_4.classpath}
+javadoc.additionalparam=
+javadoc.author=false
+javadoc.encoding=${source.encoding}
+javadoc.noindex=false
+javadoc.nonavbar=false
+javadoc.notree=false
+javadoc.private=false
+javadoc.splitindex=true
+javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-javadoc.notree=false
+jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+main.class=jolie.compiler.Main
+manifest.file=manifest.mf
+meta.inf.dir=${src.dir}/META-INF
+platform.active=default_platform
+project.jolie=../../jolie
 project.libjolie=../../libjolie
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+# Space-separated list of JVM arguments used when running the project
+# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
+# or test-sys-prop.name=value to set system properties for unit tests):
+run.jvmargs=
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+source.encoding=UTF-8
+src.dir=src
+test.src.dir=test
